Changed card html

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -170,9 +170,9 @@ bottom: 0;
 .recommended__block:last-child {
 	margin-right: 0;
 }
-.recommended__block_first {
-	background: url('../img/recommendedBg1.jpg') no-repeat center bottom / cover;
-}
+/*.recommended__block_first {*/
+/*	background: url('../img/recommendedBg1.jpg') no-repeat center bottom / cover;*/
+/*}*/
 .recommended__block_sec {
 	background: url('../img/recommendedBg2.jpg') no-repeat center bottom / cover;
 }
@@ -331,9 +331,9 @@ opacity: 0.3;
 .catalog__block .recommended__elems {
 	margin-bottom: 10px;
 }
-.recommended__elems_first .recommended__block_sec {
-	background: url('../img/catalog/catalogBg1.jpg') no-repeat center bottom / cover;
-}
+/*.recommended__elems_first .recommended__block_sec {*/
+/*	background: url('../img/catalog/catalogBg1.jpg') no-repeat center bottom / cover;*/
+/*}*/
 .recommended__elems_first .recommended__block_thr {
 	background: url('../img/catalog/catalogBg2.jpg') no-repeat center bottom / cover;
 }
