--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,9 @@
 		<div class="recommended p100">
 			<div class="title">Рекомендуем</div>
 			<div class="recommended__elems ficb">
-				<div class="recommended__block recommended__block_first">
+				<div class="recommended__block " style="background: url('{% static 'img/catalog/catalogBg1.jpg' %}') no-repeat center bottom / cover">
 					<div class="recommended__block_elems ficb">
-						<span class="recommended__block_intro">Летнее утро</span>
+                        <span class="recommended__block_intro">Летнее утро</span>
 						<span class="recommended__block_price">3 600 руб</span>
 					</div>
 				</div>
