--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -7,25 +7,24 @@
 		<div class="catalog">
 			<div class="title">Все букеты</div>
 			<div class="catalog__block">
-				<div class="recommended__elems ficb recommended__elems_first">
-					{% for bouquet in bouquets|slice:":3" %}
-						<div class="recommended__block " style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover">
-							<div class="recommended__block_elems ficb">
-								<span class="recommended__block_intro">{{ bouquet.name }}</span>
-								<span class="recommended__block_price">{{ bouquet.price }} руб</span>
-							</div>
+				{% for bouquet in bouquets %}
+					{% if forloop.counter == 1 %}
+						<div class="recommended__elems ficb recommended__elems_first">
+					{% elif forloop.counter == 4 %}
+						<div class="recommended__elems ficb recommended__elems_sec">
+					{% elif forloop.counter == 7 %}
+						<div class="recommended__elems ficb recommended__elems_thr">
+					{% endif %}
+					<div class="recommended__block " style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover">
+						<div class="recommended__block_elems ficb">
+							<span class="recommended__block_intro">{{ bouquet.name }}</span>
+							<span class="recommended__block_price">{{ bouquet.price }} руб</span>
 						</div>
-					{% endfor %}
-				</div>
-				<div class="recommended__elems ficb recommended__elems_sec">
-					{% for bouquet in bouquets|slice:"3:" %}
-						<div class="recommended__block " style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover">
-							<div class="recommended__block_elems ficb">
-								<span class="recommended__block_intro">{{ bouquet.name }}</span>
-								<span class="recommended__block_price">{{ bouquet.price }} руб</span>
-							</div>
+					</div>
+					{% if forloop.counter == 3 or forloop.counter == 6 or forloop.counter == 9 %}
 						</div>
-					{% endfor %}
+					{% endif %}
+				{% endfor %}
 				</div>
 				<button class="btn largeBtn catalog__btn">Показать ещё</button>
 			</div>
