--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -8,12 +8,8 @@
 			<div class="title">Все букеты</div>
 			<div class="catalog__block">
 				{% for bouquet in bouquets %}
-					{% if forloop.counter == 1 %}
-						<div class="recommended__elems ficb recommended__elems_first">
-					{% elif forloop.counter == 4 %}
-						<div class="recommended__elems ficb recommended__elems_sec">
-					{% elif forloop.counter == 7 %}
-						<div class="recommended__elems ficb recommended__elems_thr">
+					{% if forloop.counter == 1 or forloop.counter == 4 or forloop.counter == 7 %}
+						<div class="recommended__elems ficb">
 					{% endif %}
 					<div class="recommended__block " style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover">
 						<div class="recommended__block_elems ficb">
