--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -11,7 +11,7 @@
 					{% if forloop.counter == 1 or forloop.counter == 4 or forloop.counter == 7 %}
 						<div class="recommended__elems ficb">
 					{% endif %}
-					<div class="recommended__block " style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover">
+					<div class="recommended__block " onclick="location.href='{% url 'card' bouquet.id %}'"; style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover">
 						<div class="recommended__block_elems ficb">
 							<span class="recommended__block_intro">{{ bouquet.name }}</span>
 							<span class="recommended__block_price">{{ bouquet.price }} руб</span>
