--- a/templates/card.html
+++ b/templates/card.html
@@ -6,11 +6,11 @@
 		<div class="container">
 			<div class="card ficb">
 				<div class="card__block card__block_first">
-					<img src="{% static 'img/cardImg.jpg' %}" alt="img" class="card__img">
+					<img src="{{ bouquet.image.url }}" alt="img" class="card__img">
 				</div>
 				<div class="card__block card__block_sec">
-					<div class="title">Летнее утро</div>
-					<div class="card__block_price">3 600 руб</div>
+					<div class="title">{{ bouquet.name }}</div>
+					<div class="card__block_price">{{ bouquet.price }} руб</div>
 					<div class="card__elems ">
 						<span class="card__elems_intro">Состав</span>
 						<div class="card__items">
@@ -44,10 +44,10 @@
 						<span class="card__elems_intro">Размер</span>
 						<div class="card__items">
 							<span class="card_items_intro">
-								Высота - 50 см
+								Высота - {{ bouquet.height }} см
 							</span>
 							<span class="card_items_intro">
-								Ширина - 30 см
+								Ширина - {{ bouquet.width }} см
 							</span>
 						</div>
 					</div>
