Added composition on result.html

--- a/templates/result.html
+++ b/templates/result.html
@@ -13,15 +13,15 @@
                             <div class="card__elems ">
                                 <span class="card__elems_intro">Описание:</span>
                                 <div class="card__items">
-                                    <p class="card__items_text card__items_text__first">{{ bouquet.description  }}</p>
+                                    <p class="card__items_text card__items_text__first">{{ bouquet.description }}</p>
                                 </div>
                             </div>
                             <div class="card__elems ">
                                 <span class="card__elems_intro">Состав:</span>
                                 <div class="card__items">
-                                    <p class="card__items_text card__items_text__first">
-                                        Альстромерия белая 1 шт., Эустома белая 1 шт, Ромашка 1 шт, Роза пионовидная 1 шт
-                                    </p>
+																	<p class="card__items_text card__items_text__first">
+																		{{ bouquet.compositions }}
+																	</p>
 
                                 </div>
                             </div>
