Fixed templates: removed excess footer, contacts and consultation blocks from some pages + Fixed indents on some pages

--- a/templates/consultation.html
+++ b/templates/consultation.html
@@ -22,3 +22,5 @@
 	<img src="{% static 'img/singUpConsultationImg.jpg' %}" alt="singUpConsultationImg" class="singUpConsultation__img">
 </section>
 {% endblock %}
+{% block contacts %}{% endblock %}
+{% block consultation %}{% endblock %}
