--- a/templates/order-step.html
+++ b/templates/order-step.html
@@ -17,7 +17,6 @@
 									<input type="text" name="cardMm" class="order__form_input orderStep_form_input" placeholder="ММ" required>
 									<input type="text" name="cardGg" class="order__form_input orderStep_form_input" placeholder="ГГ" required>
 								</div>
-								
 								<input type="text" name="cardFname" class="order__form_input orderStep_form_input" placeholder="Имя владельца" required>
 								<input type="text" name="cardCvc" class="order__form_input orderStep_form_input" placeholder="CVC" required>
 							</div>
@@ -40,3 +39,5 @@
 	<img src="{% static 'img/orderImg.jpg' %}" alt="orderImg" class="order__img">
 </section>
 {% endblock %}
+{% block contacts %}{% endblock %}
+{% block consultation %}{% endblock %}
