--- a/templates/order.html
+++ b/templates/order.html
@@ -39,7 +39,6 @@
 									<input type="radio" name="orderTime" id="radio6" value="с 18:00 до 20:00" class="order__form_radio" />
 									<label for="radio6" class="radioLable">с 18:00 до 20:00</label>
 								</div>
-								
 							</div>
 							<div class="order__form_line"></div>
 							<div class="order__form_btns ficb">
@@ -48,7 +47,6 @@
 							</div>
 						</form>
 					</div>
-					
 				</div>
 			</div>
 		</div>
@@ -61,5 +59,6 @@
 			console.log(e.target.value)
 		}
 	</script>
-
 {% endblock %}
+{% block contacts %}{% endblock %}
+{% block consultation %}{% endblock %}
