--- a/templates/quiz-step.html
+++ b/templates/quiz-step.html
@@ -12,17 +12,11 @@
 			<div class="quiz__block">
 				<h1 class="quiz__title">На какой бюджет рассчитываете?</h1>
 				<div class="quiz__elems fic">
-
-                    <form action="{% url 'result' %}" method="get">
-                        {% for price in prices %}
-                            <input type="submit" class="quiz__elem" name="price" value="{{ price }}">
-                        {% endfor %}
-                    </form>
-
-{#					<button class="quiz__elem">До 1 000 руб</button>#}
-{#					<button class="quiz__elem">1 000 - 5 000 руб</button>#}
-{#					<button class="quiz__elem">от 5 000 руб</button>#}
-{#					<button class="quiz__elem">Не имеет значения</button>#}
+					<form action="{% url 'result' %}" method="get">
+						{% for price in prices %}
+							<input type="submit" class="quiz__elem" name="price" value="{{ price }}">
+						{% endfor %}
+					</form>
 				</div>
 				<div class="quiz__progress">
 					<div class="quiz__progress_step">
@@ -35,8 +29,10 @@
 					</div>
 				</div>
 			</div>
-			
 		</div>
 	</div>
-</section>			<!-- Здесь будет footer, который не нужен -->
+</section>
+{% block footer %}{% endblock %}
+{% block contacts %}{% endblock %}
+{% block consultation %}{% endblock %}
 {% endblock %}
