--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -35,5 +35,8 @@
 				
 			</div>
 		</div>
-	</section>		<!-- Здесь будет footer, но он не нужен -->
+	</section>
+{% block footer %}{% endblock %}
+{% block contacts %}{% endblock %}
+{% block consultation %}{% endblock %}
 {% endblock %}
