--- a/templates/base.html
+++ b/templates/base.html
@@ -33,22 +33,65 @@
 {% block main %}
 {% endblock %}
 
-<footer id="footer">
+{% block contacts %}
+<section id="contacts">
 	<div class="container">
-		<div class="footer">
-			<a href="{% url 'index' %}"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo footer__logo"></a>
-			<nav>
-				<ul class="menu footer__menu ficc">
-					<li class="menu__item"><a href="{% url 'catalog' %}" class="menu__item_link">Каталог</a></li>
-					<li class="menu__item"><a href="{% url 'index' %}" class="menu__item_link">Рекомендации</a></li>
-					<li class="menu__item"><a href="#footer" class="menu__item_link">Контакты</a></li>
-				</ul>
-			</nav>
-			<hr class="line"></hr>
-			<a href="#" class="footer__poli">Политика конфиденциальности</a>
-			<p class="footer_cop">©️2022. FlowerShop. Все права защищены</p>
+		<div class="contacts">
+			<div class="title">Как нас найти</div>
+			<div class="contacts__elems ficb">
+				<div class="contacts__block">
+					{% for place in places %}
+						<div class="contacts__block_item ficc">
+							<div class="contacts__block_intro">{{ place.address }}</div>
+							<a href="tel:{{ place.phone_number }}" class="contacts__block_tel">{{ place.phone_number }}</a>
+						</div>
+					{% endfor %}
+				</div>
+				<img src="{% static 'img/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
+				<div class="contacts__map">
+					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
+				</div>
+			</div>
+			<button onclick="location.href='/order/'" class="btn contacts__btn" type="button">Заказать доставку</button>
 		</div>
 	</div>
-</footer>
+</section>
+{% endblock %}
+
+{% block consultation %}
+	<section id="consultation">
+		<div class="container">
+			<div class="consultation">
+				<div class="title consultation__title">Оставьте заявку на консультацию</div>
+				<form method="post" action="/consultation/" class="consultation__form">
+					{% csrf_token %}
+					<input type="text" name="fname" class="consultation__form_input" placeholder="Введите Имя" required>
+					<input type="text" name="tel" class="consultation__form_input" placeholder="+ 7 (999) 000 00 00" required>
+					<button type="submit" class="consultation__form_btn">Отправить</button>
+				</form>
+			</div>
+		</div>
+	</section>
+{% endblock %}
+
+{% block footer %}
+	<footer id="footer">
+		<div class="container">
+			<div class="footer">
+				<a href="{% url 'index' %}"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo footer__logo"></a>
+				<nav>
+					<ul class="menu footer__menu ficc">
+						<li class="menu__item"><a href="{% url 'catalog' %}" class="menu__item_link">Каталог</a></li>
+						<li class="menu__item"><a href="{% url 'index' %}" class="menu__item_link">Рекомендации</a></li>
+						<li class="menu__item"><a href="#footer" class="menu__item_link">Контакты</a></li>
+					</ul>
+				</nav>
+				<hr class="line"></hr>
+				<a href="#" class="footer__poli">Политика конфиденциальности</a>
+				<p class="footer_cop">©️2022. FlowerShop. Все права защищены</p>
+			</div>
+		</div>
+	</footer>
+{% endblock %}
 </body>
 </html>
