--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -11,7 +11,7 @@
 					{% if forloop.counter == 1 or forloop.counter == 4 or forloop.counter == 7 %}
 						<div class="recommended__elems ficb">
 					{% endif %}
-					<div class="recommended__block " onclick="location.href='{% url 'card' bouquet.id %}'"; style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover">
+					<div class="recommended__block " onclick="location.href='{% url 'card' bouquet.id %}'" style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover">
 						<div class="recommended__block_elems ficb">
 							<span class="recommended__block_intro">{{ bouquet.name }}</span>
 							<span class="recommended__block_price">{{ bouquet.price }} руб</span>
@@ -27,16 +27,5 @@
 		</div>
 	</div>
 </section>
-<section id="consultation">
-	<div class="container">
-		<div class="consultation">
-			<div class="title consultation__title">Оставьте заявку на консультацию</div>
-			<form action="#" class="consultation__form">
-				<input type="text" name="fname" class="consultation__form_input" placeholder="Введите Имя" required>
-				<input type="text" name="tel" class="consultation__form_input" placeholder="+ 7 (999) 000 00 00" required>
-				<button type="submit" class="consultation__form_btn">Отправить</button>
-			</form>
-		</div>
-	</div>
-</section>
+{% block contacts %}{% endblock %}
 {% endblock %}
