--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 			<div class="title">Рекомендуем</div>
 			<div class="recommended__elems ficb">
 				{% for bouquet in bouquets %}
-					<div class="recommended__block " onclick="location.href='{% url 'card' bouquet.id %}'"; style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover">
+					<div class="recommended__block" onclick="location.href='{% url 'card' bouquet.id %}'" style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover">
 							<div class="recommended__block_elems ficb">
 								<span class="recommended__block_intro">{{ bouquet.name }}</span>
 								<span class="recommended__block_price">{{ bouquet.price }}</span>
@@ -36,41 +36,6 @@
 				{% endfor %}
 			</div>
 			<button onclick="location.href='/catalog/'" class="btn recommended__btn" type="button">Показать всю коллекцию</button>
-		</div>
-	</div>
-</section>
-<section id="contacts">
-	<div class="container">
-		<div class="contacts">
-			<div class="title">Как нас найти</div>
-			<div class="contacts__elems ficb">
-				<div class="contacts__block">
-					{% for place in places %}
-						<div class="contacts__block_item ficc">
-							<div class="contacts__block_intro">{{ place.address }}</div>
-							<a href="tel:{{ place.phone_number }}" class="contacts__block_tel">{{ place.phone_number }}</a>
-						</div>
-					{% endfor %}
-				</div>
-				<img src="{% static 'img/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
-				<div class="contacts__map">
-					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
-				</div>					
-			</div>
-			<button onclick="location.href='/order/'" class="btn contacts__btn" type="button">Заказать доставку</button>
-		</div>
-	</div>
-</section>
-<section id="consultation">
-	<div class="container">
-		<div class="consultation">
-			<div class="title consultation__title">Оставьте заявку на консультацию</div>
-			<form method="post" action="/consultation/" class="consultation__form">
-				{% csrf_token %}
-				<input type="text" name="fname" class="consultation__form_input" placeholder="Введите Имя" required>
-				<input type="text" name="tel" class="consultation__form_input" placeholder="+ 7 (999) 000 00 00" required>
-				<button type="submit" class="consultation__form_btn">Отправить</button>
-			</form>
 		</div>
 	</div>
 </section>
