--- a/templates/result.html
+++ b/templates/result.html
@@ -33,7 +33,7 @@
 									<div class="result__items_intro">Хотите что-то более специальное?</div>
 									<div class="result__items_block">
 									<a href="{% url 'catalog' %}"><button class="btn largeBtn result__items_block__btn">Смотреть всю коллекцию</button></a>
-									<a href="#consultation"><button class="btn largeBtn result__items_block__btn">Заказать консультацию</button></a>
+									<a href="{% url 'consultation' %}"><button class="btn largeBtn result__items_block__btn">Заказать консультацию</button></a>
 							</div>
 					</div>
 				</div>
