--- a/templates/card.html
+++ b/templates/card.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-	{% block main %}
+{% block main %}
 	<section id="card">
 		<div class="container">
 			<div class="card ficb">
@@ -14,30 +14,11 @@
 					<div class="card__elems ">
 						<span class="card__elems_intro">Состав</span>
 						<div class="card__items">
+							{% for element in compositions %}
 							<span class="card_items_intro">
-								Гортензия розовая - 1 шт.
+								{{ element.composition }} - {{ element.quantity }}
 							</span>
-							<span class="card_items_intro">
-								Ветки эквалипта - 5 шт.
-							</span>
-							<span class="card_items_intro">
-								Гипсофила - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Матовая упаковка - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Лента атласная - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Рекомендация по уходу - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Открыточка с вашими пожеланиями - 1 шт.
-							</span>
-							<span class="card_items_intro">
-								Любовь флориста (бесплатно) - 1 шт.
-							</span>
+							{% endfor %}
 						</div>
 					</div>
 					<div class="card__elems ">
