Added unit of measurement to composition on card.html

--- a/templates/card.html
+++ b/templates/card.html
@@ -16,7 +16,7 @@
 						<div class="card__items">
 							{% for element in compositions %}
 							<span class="card_items_intro">
-								{{ element.composition }} - {{ element.quantity }}
+								{{ element.composition }} - {{ element.quantity }} шт
 							</span>
 							{% endfor %}
 						</div>
