Completed order page

--- a/templates/order.html
+++ b/templates/order.html
@@ -85,13 +85,13 @@
 		</div>
 		<img src="{% static 'img/orderImg.jpg' %}" alt="orderImg" class="order__img">
 	</section> 
-	<script> 								<!-- Расположение тега отлично от представленного в изначальном виде -->
-		document.querySelector('input[type=radio]').onclick = function(e) {
-            e.preventDefault()
-			// console.log(e.target)
-			console.log(e.target.value)
-		}
-	</script>
+{#	<script> 								<!-- Расположение тега отлично от представленного в изначальном виде -->#}
+{#		document.querySelector('input[type=radio]').onclick = function(e) {#}
+{#            e.preventDefault()#}
+{#			// console.log(e.target)#}
+{#			console.log(e.target.value)#}
+{#		}#}
+{#	</script>#}
 {% endblock %}
 {% block contacts %}{% endblock %}
 {% block consultation %}{% endblock %}
