Add payment to card page.

--- a/templates/card.html
+++ b/templates/card.html
@@ -32,7 +32,7 @@
 							</span>
 						</div>
 					</div>
-					<button class="btn largeBtn card__btn">Заказать букет</button>
+					<button class="btn largeBtn card__btn" onclick="location.href='{% url 'order' bouquet.id %}'">Заказать букет</button>
 				</div>
 			</div>
 		</div>
