--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,8 @@
 					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
 				</div>
 			</div>
-			<button onclick="location.href='/order/'" class="btn contacts__btn" type="button">Заказать доставку</button>
+			<button onclick="location.href='{% url 'catalog' %}'" class="btn contacts__btn" type="button">Заказать доставку</button>
+{#			<button onclick="location.href='/order/'" class="btn contacts__btn" type="button">Заказать доставку</button>#}
 		</div>
 	</div>
 </section>
